# absorpig-webserver

./: .gitignore  run.sh
backend/: README.md  main.py  pyproject.toml
frontend/: README.md  package-lock.json  package.json
frontend/src/: app.html
frontend/src/lib/spinner/: Spinner.svelte  loader.js
frontend/src/routes/: +page.svelte
